# KEA_SI

./: .gitignore
00_Miscellaneous/: base64_encoded_images.html  encode.py  stripeiframe.html  youtubevideoembedded.html
01_modules/node_commonjs/: index.js  myModule.js
01_modules/node_esmodules/: index.js  myModule.js
01_modules/python/: main.py
02_data_formats/: me.csv  me.json  me.txt  me.xml  me.yaml
04_basic_servers/node/: app.js
04_basic_servers/python/: main.py  pyproject.toml
05_date/node/: index.js
05_date/python/: main.py
06_server_to_server/node/: app.js
06_server_to_server/python/: main.py  pyproject.toml
07_dotenv/node/: index.js  package.json
07_dotenv/python/: .env_template  main.py  pyproject.toml
09_OpenAPI/node/: app.js  package-lock.json  package.json
09_OpenAPI/node/routers/: spacecraftRouter.js  usersRouter.js
09_OpenAPI/python/: main.py  pyproject.toml
09_OpenAPI/python/routers/: __init__.py  datetime_router.py  spacecraft_router.py
12_server_sent_event/node/: app.js
12_server_sent_event/node/public/: index.html
12_server_sent_event/python/: main.py  pyproject.toml
12_server_sent_event/python/templates/: index.html
13_github_webhooks/node/: app.js
13_github_webhooks/python/: main.py  pyproject.toml
14_azure_functions/PythonHttpTrigger/: __init__.py  function.json
15_websockets/node/: client.js  index.html  package-lock.json  package.json  server.js
15_websockets/python/: connection_manager.py  main.py  pyproject.toml
16_cors/: index.html
16_cors/node/: app.js  package.json
16_cors/python/: main.py  pyproject.toml
17_multipart-forms/: index.html
17_multipart-forms/node/: app.js
17_multipart-forms/python/: main.py  pyproject.toml
18_redis/node/: index.js  package.json
18_redis/python/basic_example/: main.py  pyproject.toml
18_redis/python/pub-sub/: publisher.py  pyproject.toml  subscriber.py
18_redis/python/task_queues/: pyproject.toml  scheduler.py  utils.py  worker.py
19_web_scraping/python/1_data_scraper/: data_scraper.py  pyproject.toml
19_web_scraping/python/2_web_crawler/: pyproject.toml
19_web_scraping/python/3_scrapy_basic/: pyproject.toml
19_web_scraping/python/4_scrapy_wiki/: about.txt  pyproject.toml
19_web_scraping/python/4_scrapy_wiki/wikicrawler/: items.py  middlewares.py  pipelines.py  settings.py
98_exercises/docker_compose/: pyproject.toml
98_exercises/hashing/: main.py  pyproject.toml
98_exercises/rabbitmq/python/: configurator.py  main.py  publisher.py  pyproject.toml  subscriber.py
98_exercises/snapshot_tombstone/python/: database_command.py  database_initializer.py  database_request.py  main.py  pyproject.toml
99_afleveringer/01_file_formats_bonanza/: Readme.txt
99_afleveringer/01_file_formats_bonanza/files/: book.json  book.xml
99_afleveringer/01_file_formats_bonanza/java/: pom.xml
99_afleveringer/01_file_formats_bonanza/java/src/main/java/: BookData.java  Main.java  Parser.java
99_afleveringer/01_file_formats_bonanza/python/: data_classes.py  main.py  parser_classes.py
99_afleveringer/02_data_format_translation_servers/: readme.txt
99_afleveringer/02_data_format_translation_servers/server_a_python/: data_classes.py  main.py  parser_classes.py  pyproject.toml
99_afleveringer/02_data_format_translation_servers/server_a_python/data/: book.txt
99_afleveringer/02_data_format_translation_servers/server_b_node/: app.js  package-lock.json  package.json  parser.js
99_afleveringer/02_data_format_translation_servers/server_b_node/data/: book.csv  book.yaml
99_afleveringer/03_create_openapi-documentation/: app.js  package-lock.json  package.json  readme.txt
99_afleveringer/03_create_openapi-documentation/routers/: unitsRouter.js
99_afleveringer/03_create_openapi-documentation/saved_swagger_page/: Swagger UI.htm
99_afleveringer/03_create_openapi-documentation/saved_swagger_page/Swagger UI_files/: swagger-ui-init.js
99_afleveringer/04_sse_example/: app.py  pyproject.toml  readme.txt
99_afleveringer/04_sse_example/static/: site.css
99_afleveringer/04_sse_example/templates/: index.html  sendmessage.html
99_afleveringer/M_01_database_granular_access/: Choice_of_database.rtf  company_mro_docs_full.html  database_access.html  database_setup.txt  integrator1_mro_docs_full.html
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/: documentation.html  readme.txt
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/integrator_script/: main.py  pyproject.toml
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/publisher/: main.py  pyproject.toml
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/registrar/: app.py  pyproject.toml
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/registrar/static/: site.css
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/registrar/templates/: index.html  layout.html
99_afleveringer/M_01_expose_and_integrate_with_a_webhook_system/webhook/: main.py  pyproject.toml
99_afleveringer/M_02_integrate_with_an_auth_service/: app.py  pyproject.toml  readme.txt
99_afleveringer/M_02_integrate_with_an_auth_service/doc/: setup.md
99_afleveringer/M_02_integrate_with_an_auth_service/static/: site.css
99_afleveringer/M_02_integrate_with_an_auth_service/templates/: index.html  secret.html
99_afleveringer/M_02_web_scraping/: main.py  pyproject.toml  readme.txt
99_afleveringer/O_01_Serialize_Marshall_data/: readme.txt
99_afleveringer/O_01_Serialize_Marshall_data/python/: classes.py  main.py  server.py
testpoetry/: pyproject.toml
