[tool.poetry]
name = "04-sse-example"
version = "0.1.0"
description = ""
authors = ["mija0001 <mija0001@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "04_sse_example"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-sse = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
