[tool.poetry]
name = "task-queues"
version = "0.1.0"
description = ""
authors = ["mija0001 <mija0001@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "task_queues"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.4"
rq = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
