[tool.poetry]
name = "server-a-python"
version = "0.1.0"
description = ""
authors = ["Mikkel <mija0001@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "server_a_python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
xmltodict = "^0.13.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
