[tool.poetry]
name = "integrator-script"
version = "0.1.0"
description = ""
authors = ["mija0001 <mija0001@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "integrator_script"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
